完成单元测试

--- a/test/index.html
+++ b/test/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="../node_modules/requirejs/require.js"></script>
-</head>
-<body>
-</body>
-<script src="./test.js"></script>
-<script>
-
-</script>
+<html>
+  <head>
+    <title>Mocha</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mocha.css" />
+  </head>
+  <body>
+    <div id="mocha"></div>
+    <script src="mocha.js"></script>
+    <script>mocha.setup('bdd');</script>
+    <script src="tests.bundle.js"></script>
+    <script>
+      mocha.run();
+    </script>
+  </body>
 </html>
